docs(introduction): fix accordion misalignment

--- a/apps/website/src/global.css
+++ b/apps/website/src/global.css
@@ -20,8 +20,8 @@
     --accent-foreground: 197 33% 0%;
     --destructive: 0 70% 50%;
     --destructive-foreground: 187 40% 98%;
-    --border: 190 18% 67%;
-    --input: 190 18% 67%;
+    --border: 190 11% 67%;
+    --input: 190 11% 67%;
     --ring: 197 100% 43%;
     --radius: 0.5rem;
   }
